--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <header Access-Control-Allow-Origin: abc.com></header>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Profle Generator for TETR.IO</title>
 </head>
 <body>
     <script>
